Removed sensitive information

--- a/Data_Scrabing_task.ipynb
+++ b/Data_Scrabing_task.ipynb
@@ -368,7 +368,7 @@
     "\n",
     "# Authentifizierungs-Header (ersetze 'your_token' durch dein persönliches Token)\n",
     "headers = {\n",
-    "    \"Authorization\": \"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\"  # Ersetze hier dein neues Token\n",
+    "      # Ersetze hier dein neues Token\n",
     "}\n",
     "\n",
     "# API-Anfrage senden\n",
