Removed sensitive information

--- a/Data_Scrabing_task.ipynb
+++ b/Data_Scrabing_task.ipynb
@@ -372,7 +372,8 @@
     "}\n",
     "\n",
     "# API-Anfrage senden\n",
-    "response = requests.get(url, params=params, headers=headers)\n",
+    "response = requests.get(url, params=params, #headers=headers\n",
+    "                        )\n",
     "data = response.json()\n",
     "\n",
     "# Überprüfen, ob die Anfrage erfolgreich war\n",
